--- a/TestPerfCounter/TestPerfCounter.csproj
+++ b/TestPerfCounter/TestPerfCounter.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PerformanceMetric.cs" />
     <Compile Include="WMIConnector.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
