--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
+# [Rr]elease/
 x64/
 build/
 bld/
-[Bb]in/
+# [Bb]in/
 [Oo]bj/
 
 # MSTest test Results
